Finish basic web based config code

--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -7,7 +7,7 @@
         </section>
     </header>
     <section class="container" id="config">
-        <h5 class="title">Configuration</h5>
+        <h4 class="title">Configuration</h4>
         <p>
             From here you can configure some of the external systems that Officebot uses.
             <strong>If you don't want to use a service, just leave it's details blank.</strong>
@@ -16,25 +16,25 @@
         <form id="config-form" method="post" action="/configuration">
             <fieldset>
                 <label for="botId">Bot ID</label>
-                <input type="text" placeholder="Your bots Microsoft Bot Connector ID" id="botId" value="{{config.botId}}">
+                <input type="text" placeholder="Your bots Microsoft Bot Connector ID" id="botId" value="{{config.bot.id}}">
 
                 <label for="botPass">Bot Password</label>
-                <input type="password" placeholder="Your bots Microsoft Bot Connector Password" id="botPass" value="{{config.botPass}}">
+                <input type="password" placeholder="Your bots Microsoft Bot Connector Password" id="botPass" value="{{config.bot.pass}}">
 
                 <label for="luisModel">LUIS Model URL</label>
-                <input type="text" placeholder="Your LUIS Model URL" id="luisModel" value="{{config.luisModel}}">
+                <input type="text" placeholder="Your LUIS Model URL" id="luisModel" value="{{config.bot.luisModel}}">
 
                 <label for="ghToken">GitHub Access Token</label>
-                <input type="text" placeholder="You can get this from your account settings" id="ghToken" value="{{config.ghToken}}">
-
+                <input type="text" placeholder="You can get this from your account settings" id="ghToken" value="{{config.github.token}}">
+                
                 <label for="trelloToken">Trello Token</label>
-                <input type="text" placeholder="Get this from trello dev settings" id="trelloToken" value="{{config.trelloToken}}">
+                <input type="text" placeholder="Get this from trello dev settings" id="trelloToken" value="{{config.trello.token}}">
 
                 <label for="trelloKey">Trello Key</label>
-                <input type="password" placeholder="Get this from trello dev settings" id="trelloKey" value="{{config.trelloKey}}">
-
+                <input type="password" placeholder="Get this from trello dev settings" id="trelloKey" value="{{config.trello.key}}">
+            
                 <input class="button-primary" type="submit" value="Save">
-            </fieldset>
+                </fieldset>
         </form>
     </div>
 </main>
