Update web views slightly

--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -3,11 +3,15 @@
     <header class="header">
         <section class="container">
             <h1>Officebot</h1>
-            <p>Your friendly little robot</p>
+            <p>
+                Your friendly little robot
+                <br>
+                <i><small>Currently in Alpha!</small></i>
+            </p>
         </section>
     </header>
-    <section class="container" id="config">
-        <h4 class="title">Configuration</h4>
+    <section class="container">
+        <h4>Configuration</h4>
         <p>
             From here you can configure some of the external systems that Officebot uses.
             <strong>If you don't want to use a service, just leave it's details blank.</strong>
