--- a/web-server/views/default.hbs
+++ b/web-server/views/default.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Officebot</title>
+    <title>Officer | NLP Bot Framework</title>
 
         <!-- Google Fonts -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
